--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.2",
+    "framer-motion": "^11.3.31",
+    "postcss": "^8.4.43",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
